--- a/segmentation/CMakeLists.txt
+++ b/segmentation/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2020 Geonuk Lee
+# Copyright (c) 2023 Geonuk Lee
 #
 # Permission is hereby granted, free of charge, to any person
 # obtaining a copy of this software and associated documentation
@@ -20,15 +20,13 @@
 # OTHER DEALINGS IN THE SOFTWARE.
 
 cmake_minimum_required(VERSION 3.1)
-project(pipeline)
+project(segmentation)
 cmake_policy(SET CMP0042 NEW)
 cmake_policy(SET CMP0072 OLD)
-
-LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
+LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake_modules)
 
 find_package(OpenCV 3.4 REQUIRED PATHS $ENV{HOME}/ws/opencv_3.4.14/build)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-
 find_package(Eigen3 REQUIRED)
 include_directories( ${EIGEN3_INCLUDE_DIR} )
 
@@ -44,15 +42,6 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(FLANN REQUIRED)
 include_directories(${FLANN_INCLUDE_DIR})
 
-find_package(VTK REQUIRED)
-include(${VTK_USE_FILE})
-
-find_package(Qt5 COMPONENTS REQUIRED Core Gui Widgets)
-include_directories(${Qt5Widgets_INCLUDE_DIRS})
-
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
-
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -fdiagnostics-color=always")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp") # Forbid it with direct method.
@@ -60,21 +49,24 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -fdiagnostics-color=
 add_definitions(-DPACKAGE_DIR="${CMAKE_SOURCE_DIR}")
 
 include_directories("${CMAKE_SOURCE_DIR}/include")
-include_directories("${CMAKE_SOURCE_DIR}")
+include_directories("${CMAKE_SOURCE_DIR}/..")
+include_directories("${CMAKE_SOURCE_DIR}/../pipeline/include")
+
 
 file(GLOB src src/*.cpp)
-add_library(pipeline ${src})
-set_target_properties(pipeline PROPERTIES UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 5)
+add_executable(example_segmentation ${src}
+  ../pipeline/src/camera.cpp
+  ../pipeline/src/common.cpp
+  ../pipeline/src/dataset.cpp
+)
 
-target_link_libraries(pipeline 
+set_target_properties(example_segmentation PROPERTIES UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 10)
+
+target_link_libraries(example_segmentation
 ${OpenCV_LIBS}
 ${Boost_LIBRARIES}
 ${FLANN_LIBRARY}
-${VTK_LIBRARIES}
-Qt5::Core
-Qt5::Gui 
-Qt5::Widgets
-${PROJECT_SOURCE_DIR}/thirdparty/DBoW2/lib/libDBoW2.so
+${PROJECT_SOURCE_DIR}/../thirdparty/DBoW2/lib/libDBoW2.so
 optimized g2o_core
 optimized g2o_stuff
 optimized g2o_types_sba
@@ -84,15 +76,3 @@ debug g2o_types_sba_d
 )
 
 
-#file(GLOB unit_src unittest/*.cpp)
-#add_executable(unittest ${unit_src})
-#set_target_properties(unittest PROPERTIES UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 5)
-#target_link_libraries(unittest pipeline ${GTEST_LIBRARIES})
-#add_dependencies(unittest pipeline)
-
-add_subdirectory(examples/kitti)
-#add_subdirectory(examples/epip_cluster)
-add_subdirectory(examples/segmentation)
-
-
-set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CMAKE_COMMAND} -E time")
