--- a/segmentation/CMakeLists.txt
+++ b/segmentation/CMakeLists.txt
@@ -42,8 +42,10 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(FLANN REQUIRED)
 include_directories(${FLANN_INCLUDE_DIR})
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -fdiagnostics-color=always")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fdiagnostics-color=always")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp") # Forbid it with direct method.
 
 add_definitions(-DPACKAGE_DIR="${CMAKE_SOURCE_DIR}")
@@ -73,6 +75,7 @@ optimized g2o_types_sba
 debug g2o_core_d
 debug g2o_stuff_d
 debug g2o_types_sba_d
+stdc++fs
 )
 
 
