Remove old codes.

--- a/segmentation/CMakeLists.txt
+++ b/segmentation/CMakeLists.txt
@@ -60,6 +60,7 @@ add_executable(example_segmentation ${src}
   ../pipeline/src/camera.cpp
   ../pipeline/src/common.cpp
   ../pipeline/src/dataset.cpp
+  ../pipeline/src/orb_extractor.cpp
 )
 #set_target_properties(example_segmentation PROPERTIES UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 10)
 set_source_files_properties(src/debug.cpp PROPERTIES COMPILE_FLAGS "-O0 -g") # No optmization 
