--- a/segmentation/CMakeLists.txt
+++ b/segmentation/CMakeLists.txt
@@ -89,7 +89,15 @@ target_link_libraries(example_segmentation ${CMAKE_SOURCE_DIR}/../stereo_seg/lib
   ${PYTHON_LIBRARIES}
 )
 
+find_package(PCL REQUIRED)
+include_directories(${PCL_INCLUDE_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+link_directories(${PCL_LIBRARY_DIRS})
+
+target_link_libraries(example_segmentation ${PCL_LIBRARIES})
+
 set_source_files_properties(src/edge.cpp PROPERTIES COMPILE_FLAGS "-mavx2")
+#set_source_files_properties(src/edge.cpp PROPERTIES COMPILE_FLAGS "-mavx2 -O0 -g")
 #set_target_properties(example_segmentation PROPERTIES UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 10)
 #set_source_files_properties(src/debug.cpp PROPERTIES COMPILE_FLAGS "-O0 -g") # No optmization
 #set_source_files_properties(src/matcher.cpp PROPERTIES COMPILE_FLAGS "-O0 -g") # No optmization
